# agentbranch

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
docker/: build.Dockerfile
docs/: commands.md  development.md  observability.md
lima/: safe-sync-linux.yaml  safe-sync-macos.yaml
lima/guest/: scrub-artifacts.sh  shellenv.sh  workspace-init.sh
lima/provision/: 00-system.sh  05-network-guard.sh  10-agent-clis.sh  20-docker-compose.sh
migrations/: 0001_init.sql
policy/: sync-excludes.txt
scripts/: smoke-e2e.sh
scripts/smoke-lib/: common.sh  fixtures.sh
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  testing.rs  types.rs
src/commands/: agent.rs  attach.rs  base.rs  close.rs  doctor.rs  export.rs  gc.rs  kill.rs  launch.rs  logs.rs  mod.rs  open.rs  prepare.rs  ps.rs  repair.rs  run.rs  session_slot.rs  shell.rs  show.rs  ssh.rs  start.rs  stop.rs  sync_back.rs  watch.rs
src/db/: connect.rs  events.rs  locks.rs  migrate.rs  mod.rs  models.rs  sessions.rs  sync_runs.rs
src/error/: app.rs  config.rs  db.rs  lima.rs  mod.rs  observability.rs  process.rs  sync.rs  validation.rs
tests/: attach_runtime_errors.rs  base_show_cli.rs  cli_agent_runtime.rs  cli_exit_codes.rs  cli_help.rs  close_repair_orchestration.rs  export_patch.rs  fixture_agent_cli_provision_script.rs  fixture_docker_compose_provision_script.rs  fixture_lima_templates.rs  fixture_network_guard_script.rs  fixture_shellenv_script.rs  fixture_smoke_layout.rs  fixture_system_provision_script.rs  logs_start_stop_show.rs  ps_cli.rs  session_positionals_cli.rs  show_agent_runtime.rs
(+51 files in other folders)
