[package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
description = "Disposable coding sessions for AI agents, synced back through Git"
edition = "2024"
license = "Apache-2.0"
name = "agbranch"
readme = "README.md"
version = "0.1.0"

[dependencies]
byte-unit = { version = "5.2", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
comfy-table = "7.2"
ctrlc = "3"
fs2 = "0.4"
humantime = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "1.1.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
temp-env = "0.3"
